--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-modal": "^13.0.1",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
