--- a/package.json
+++ b/package.json
@@ -9,21 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@gorhom/bottom-sheet": "^5.0.6",
+    "@shopify/flash-list": "1.7.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@supabase/supabase-js": "^2.45.5",
-    "expo": "~51.0.28",
-    "expo-font": "~12.0.10",
-    "expo-haptics": "~13.0.1",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.7",
+    "expo-apple-authentication": "~7.1.1",
+    "expo-av": "~15.0.1",
+    "expo-camera": "~16.0.7",
+    "expo-contacts": "~14.0.2",
+    "expo-file-system": "~18.0.3",
+    "expo-font": "~13.0.1",
+    "expo-haptics": "~14.0.0",
+    "expo-image-manipulator": "~13.0.5",
+    "expo-image-picker": "~16.0.2",
+    "expo-splash-screen": "~0.29.11",
+    "expo-status-bar": "~2.0.0",
     "moment": "^2.30.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
-    "react-native-svg": "^15.8.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-svg": "15.8.0",
+    "react-native-vector-icons": "^10.1.0",
+    "expo-video": "~2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
