--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "flock",
-    "slug": "flock",
+    "name": "rue",
+    "slug": "rue",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
