--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.1.0",
-    "expo-video": "~2.0.1"
+    "expo-video": "~2.0.1",
+    "expo-linear-gradient": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
