--- a/app.json
+++ b/app.json
@@ -18,6 +18,8 @@
       "bundleIdentifier": "com.lock3.flock"
     },
     "android": {
+      "package": "com.yourcompany.yourappname",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
