--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~52.0.20",
     "expo-apple-authentication": "~7.1.1",
     "expo-av": "~15.0.1",
+    "expo-blur": "~14.0.2",
     "expo-camera": "~16.0.10",
     "expo-contacts": "~14.0.2",
     "expo-dev-client": "~5.0.8",
@@ -32,6 +33,7 @@
     "expo-status-bar": "~2.0.0",
     "expo-updates": "~0.26.10",
     "expo-video": "~2.0.3",
+    "lottie-react-native": "7.1.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
@@ -43,7 +45,7 @@
     "react-native-switch": "^1.5.1",
     "react-native-vector-icons": "^10.1.0",
     "tinycolor2": "^1.6.0",
-    "lottie-react-native": "7.1.0"
+    "unicode-emoji": "^2.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
