--- a/app.json
+++ b/app.json
@@ -15,10 +15,10 @@
     "ios": {
       "supportsTablet": false,
       "usesAppleSignIn": true,
-      "bundleIdentifier": "com.lock3.flock"
+      "bundleIdentifier": "io.lingerlonger.flock"
     },
     "android": {
-      "package": "com.yourcompany.yourappname",
+      "package": "io.lingerlonger.flock",
       "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
@@ -45,12 +45,6 @@
             "./assets/fonts/nunito-light.ttf",
             "./assets/fonts/nunito-light-italic.ttf"
           ]
-        }
-      ],
-      [
-        "expo-contacts",
-        {
-          "contactsPermission": "Allow MEEEEE to access your contacts."
         }
       ],
       [
@@ -83,7 +77,8 @@
           "defaultChannel": "default",
           "enableBackgroundRemoteNotifications": true
         }
-      ]
+      ],
+      [ "@react-native-google-signin/google-signin" ]
     ],
     "extra": {
       "eas": {
