--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
-    "@shopify/flash-list": "1.7.1",
     "@supabase/supabase-js": "^2.45.5",
     "expo": "~52.0.20",
     "expo-apple-authentication": "~7.1.1",
     "expo-av": "~15.0.1",
-    "expo-blur": "~14.0.2",
     "expo-camera": "~16.0.10",
-    "expo-contacts": "~14.0.2",
-    "expo-dev-client": "~5.0.8",
+    "expo-dev-client": "~5.0.11",
     "expo-file-system": "~18.0.6",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -33,7 +31,6 @@
     "expo-status-bar": "~2.0.0",
     "expo-updates": "~0.26.10",
     "expo-video": "~2.0.3",
-    "lottie-react-native": "7.1.0",
     "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.76.5",
